[package]
name = "undercity"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = "1.0.70"
bevy = "0.10.1"
bevy_rapier2d = "0.21.0"
linkme = "0.3.9"
rand = { version = "0.8.5", features = ["small_rng"] }
ron = "0.8.0"
serde = { version = "1.0.170", features = ["derive"] }
