[package]
name = "undercity"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = "1.0"
bevy = "0.11"
bevy_rapier2d = "0.21"
linkme = "0.3"
rand = { version = "0.8", features = ["small_rng"] }
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }

[patch.crates-io]
bevy_rapier2d = { git = "https://github.com/devil-ira/bevy_rapier", branch = "bevy-0.11" }
